fixed overflow on mobile

--- a/styles/partials/_genericStyling.scss
+++ b/styles/partials/_genericStyling.scss
@@ -8,12 +8,13 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 
 html {
     font-size: 125%;
-    overflow-x: hidden;
+    
 }
 
 body {
     margin: 0;
-    padding: 0
+    padding: 0;
+    overflow-x: hidden;
 }
 
 a {
